--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "zloopctl"
 version = "0.1.0"
 edition = "2024"
+license-file = "COPYING.GPL"
+license = "GPL-2.0"
 
 [dependencies]
 clap = "4.5.49"
